[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hacs-edgeplane"
version = "0.1.1"
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.9"]

[project.optional-dependencies]
test = [
    "pytest-homeassistant-custom-component==0.13.192",
    "pytest-cov",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["custom_components*"]
